--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 
 body {
     margin: 0;
-    font-family: 'Times New Roman', Times, serif
+    font-family: 'Times New Roman', Times, serif;
     background-color: beige;
 }
 
