--- a/style.css
+++ b/style.css
@@ -7,18 +7,38 @@ body {
     margin: 0;
     font-family: 'Times New Roman', Times, serif;
     background-color: beige;
+    padding-top: 80px;
 }
 
 /* ===== NAVBAR ===== */
 .navbar {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1000;
+
     background: black;
     color: white;
+
     padding: 15px 30px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    position: static;
+
+    transition: background-color 0.4s ease, box-shadow 0.4s ease;
 }
+
+/* Header when scrolled */
+.navbar.scrolled {
+    background: rgba(255, 255, 255, 0.763);
+    box-shadow: 0 6px 18px rgba(0,0,0,0.15);
+}
+
+.navbar.scrolled .logo,
+.navbar.scrolled a {
+    color: black;
+}
+
 
 .nav-links {
     display: flex;
@@ -26,10 +46,12 @@ body {
 }
 
 .nav-links a {
-    color: white;
+    color: inherit;
     text-decoration: none;
     position: relative;
+    transition: color 0.3s ease;
 }
+
 
 .nav-links a::after {
     content: "";
@@ -393,4 +415,37 @@ form textarea:focus {
 .skills-right:hover {
     box-shadow: 0 16px 35px rgba(0, 0, 0, 0.25);
     border-color: #d2b48c;
+}
+.menu-toggle {
+    display: none;
+    font-size: 24px;
+    cursor: pointer;
+}
+
+/* Mobile */
+@media (max-width: 768px) {
+    .menu-toggle {
+        display: block;
+    }
+
+    .nav-links {
+        position: absolute;
+        top: 65px;
+        right: 20px;
+        background: white;
+        flex-direction: column;
+        padding: 15px;
+        border-radius: 8px;
+        box-shadow: 0 10px 30px rgba(0,0,0,0.2);
+        display: none;
+    }
+
+    .nav-links a {
+        color: black;
+        padding: 8px 0;
+    }
+
+    .nav-links.active {
+        display: flex;
+    }
 }
